[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/controller/AuthController.gd" type="Script" id=1]
[ext_resource path="res://asset/img/side_img.png" type="Texture" id=2]
[ext_resource path="res://asset/img/app_logo.png" type="Texture" id=3]
[ext_resource path="res://asset/ui/font/NotoSans-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://asset/ui/ui.theme" type="Theme" id=5]
[ext_resource path="res://asset/ui/button/normal_hover.stylebox" type="StyleBox" id=6]
[ext_resource path="res://asset/ui/button/secondary_hover.stylebox" type="StyleBox" id=7]
[ext_resource path="res://asset/ui/button/secondary.stylebox" type="StyleBox" id=8]
[ext_resource path="res://asset/ui/button/normal.stylebox" type="StyleBox" id=9]
[ext_resource path="res://asset/ui/msgbox/MsgBox.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
font_data = ExtResource( 4 )

[node name="Auth" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="container" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="ColorRect" parent="container"]
margin_right = 1024.0
margin_bottom = 602.0

[node name="split" type="HSplitContainer" parent="container"]
margin_right = 1024.0
margin_bottom = 602.0
rect_min_size = Vector2( 1024, 600 )
custom_constants/separation = 0
split_offset = 4
dragger_visibility = 2

[node name="left_side" type="TextureRect" parent="container/split"]
modulate = Color( 0.490196, 0.87451, 1, 1 )
margin_right = 688.0
margin_bottom = 602.0
texture = ExtResource( 2 )

[node name="r_side" type="CenterContainer" parent="container/split"]
margin_left = 688.0
margin_right = 1024.0
margin_bottom = 602.0

[node name="vcontainer" type="VBoxContainer" parent="container/split/r_side"]
margin_left = 24.0
margin_top = 96.0
margin_right = 312.0
margin_bottom = 506.0

[node name="logo" type="TextureRect" parent="container/split/r_side/vcontainer"]
margin_right = 288.0
margin_bottom = 75.0
texture = ExtResource( 3 )
stretch_mode = 3

[node name="panel_login" type="VBoxContainer" parent="container/split/r_side/vcontainer"]
visible = false
margin_top = 79.0
margin_right = 288.0
margin_bottom = 278.0
hint_tooltip = "Alamat"
custom_constants/separation = 21

[node name="login_label" type="Label" parent="container/split/r_side/vcontainer/panel_login"]
margin_right = 288.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.454902, 0.807843, 1 )
text = "Halaman Login"
align = 1

[node name="in_surel" type="LineEdit" parent="container/split/r_side/vcontainer/panel_login"]
margin_top = 44.0
margin_right = 288.0
margin_bottom = 67.0
hint_tooltip = "Alamat email yang telah terdaftar"
theme = ExtResource( 5 )
placeholder_text = "Alamat Surel"

[node name="in_sandi" type="LineEdit" parent="container/split/r_side/vcontainer/panel_login"]
margin_top = 88.0
margin_right = 288.0
margin_bottom = 111.0
hint_tooltip = "Kata sandi yang digunakan saat pendaftaran"
theme = ExtResource( 5 )
secret = true
secret_character = "•"
placeholder_text = "Kata Sandi"

[node name="btn_login" type="Button" parent="container/split/r_side/vcontainer/panel_login"]
margin_top = 132.0
margin_right = 288.0
margin_bottom = 155.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
text = "Masuk"

[node name="btn_goto_register" type="Button" parent="container/split/r_side/vcontainer/panel_login"]
margin_top = 176.0
margin_right = 288.0
margin_bottom = 199.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Daftar"

[node name="panel_register" type="VBoxContainer" parent="container/split/r_side/vcontainer"]
margin_top = 79.0
margin_right = 288.0
margin_bottom = 410.0
hint_tooltip = "Alamat"
custom_constants/separation = 21

[node name="register_label" type="Label" parent="container/split/r_side/vcontainer/panel_register"]
margin_right = 288.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.454902, 0.807843, 1 )
text = "Daftar Sebagai  Investor"
align = 1

[node name="in_fname" type="LineEdit" parent="container/split/r_side/vcontainer/panel_register"]
margin_top = 44.0
margin_right = 288.0
margin_bottom = 67.0
hint_tooltip = "Nama depan"
theme = ExtResource( 5 )
placeholder_text = "Nama Depan"

[node name="in_lname" type="LineEdit" parent="container/split/r_side/vcontainer/panel_register"]
margin_top = 88.0
margin_right = 288.0
margin_bottom = 111.0
hint_tooltip = "Nama belakang"
theme = ExtResource( 5 )
placeholder_text = "Nama Belakang"

[node name="in_phone" type="SpinBox" parent="container/split/r_side/vcontainer/panel_register"]
margin_top = 132.0
margin_right = 288.0
margin_bottom = 155.0
hint_tooltip = "Nomor telefon "
theme = ExtResource( 5 )
min_value = 8.0
value = 8.0
allow_greater = true
prefix = "+62"

[node name="in_surel" type="LineEdit" parent="container/split/r_side/vcontainer/panel_register"]
margin_top = 176.0
margin_right = 288.0
margin_bottom = 199.0
hint_tooltip = "Alamat email yang telah terdaftar"
theme = ExtResource( 5 )
placeholder_text = "Alamat Surel"

[node name="in_sandi" type="LineEdit" parent="container/split/r_side/vcontainer/panel_register"]
margin_top = 220.0
margin_right = 288.0
margin_bottom = 243.0
hint_tooltip = "Sandi pengaman akun anda"
theme = ExtResource( 5 )
secret = true
secret_character = "•"
placeholder_text = "Kata Sandi"

[node name="btn_register" type="Button" parent="container/split/r_side/vcontainer/panel_register"]
margin_top = 264.0
margin_right = 288.0
margin_bottom = 287.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 9 )
text = "Daftar"

[node name="btn_goto_login" type="Button" parent="container/split/r_side/vcontainer/panel_register"]
margin_top = 308.0
margin_right = 288.0
margin_bottom = 331.0
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 7 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Masuk"

[node name="MsgBox" parent="." instance=ExtResource( 10 )]
visible = false

[connection signal="button_up" from="container/split/r_side/vcontainer/panel_login/btn_login" to="." method="_on_btn_login_button_up"]
[connection signal="button_up" from="container/split/r_side/vcontainer/panel_login/btn_goto_register" to="." method="_on_btn_goto_register_button_up"]
[connection signal="button_up" from="container/split/r_side/vcontainer/panel_register/btn_register" to="." method="_on_btn_register_button_up"]
[connection signal="button_up" from="container/split/r_side/vcontainer/panel_register/btn_goto_login" to="." method="_on_btn_goto_login_button_up"]
